--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>jar</packaging>
 
 	<name>pdfextractor</name>
-	<description>Demo project for Spring Boot</description>
+	<description>PDF Extractor</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
