--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 9696
 
-app.solar.address = http://localhost:8983/solr/
+app.solar.address = http://localhost:8983/solr/test
 
 app.groundtruth.path = /home/amin/Documents/amin/classification/allextracted
